Update README w/link to slides

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 This is code that goes along with a presentation I have given a few times on Hadoop.
+
+You can find the presentation slides at http://www.slideshare.net/scottleber/hadoop-7904044
